--- a/config.toml
+++ b/config.toml
@@ -6,6 +6,7 @@ metadataformat = "yaml"
 canonifyurls = true
 # Enable Google Analytics by entering your tracking id
 googleAnalytics = ""
+hasCJKLanguage = true
 
 [params]
 	# General information
