--- a/config.toml
+++ b/config.toml
@@ -1,6 +1,6 @@
 baseurl = "https://example.org/"
 languageCode = "ja"
-title = "Material Docs hogehoge"
+title = "Material Docs"
 theme = "hugo-material-docs"
 metadataformat = "yaml"
 canonifyurls = true
@@ -10,13 +10,13 @@ hasCJKLanguage = true
 
 [params]
 	# General information
-	author = "ken5scal"
+	author = "Digitalcraftsman"
 	description = "A material design theme for documentations."
 	copyright = "Released under the MIT license"
 
 	# Repository
 	provider = "GitHub"
-	repo_url = "https://github.com/ken5scal"
+	repo_url = "https://github.com/digitalcraftsman/hugo-material-docs"
 
 	version = "1.0.0"
 	logo = "images/logo.png"
@@ -41,9 +41,9 @@ hasCJKLanguage = true
 
 
 [social]
-    twitter = "ken5scal"
-    github  = "ken5scal"
-    email   = "kengoscal@gmail.com"
+    twitter = ""
+    github  = "digitalcraftsman"
+    email   = "hello@email.com"
 
 #[[menu.main]]
 #	name   = "Material"
