--- a/config.toml
+++ b/config.toml
@@ -15,11 +15,11 @@ hasCJKLanguage = true
 	copyright = "Released under the MIT license"
 
 	# Repository
-	#provider = "GitHub"
-	#repo_url = "https://github.com/digitalcraftsman/hugo-material-docs"
+	# provider = "GitHub"
+	# repo_url = "https://github.com/ken5scal/secure-brigate-blog"
 
-	version = "1.0.0"
-	logo = "images/logo.png"
+	#version = "1.0.0"
+	logo = "logo.png"
 	favicon = ""
 
 	permalink = "#"
