--- a/config.toml
+++ b/config.toml
@@ -1,4 +1,4 @@
-baseurl = "https://secure-brigade.com"
+baseurl = "https://secure-brigade.com/"
 languageCode = "ja"
 title = "セキュア旅団"
 theme = "hugo-material-docs"
