--- a/config.toml
+++ b/config.toml
@@ -4,12 +4,18 @@ title = "セキュア旅団"
 theme = "hugo-material-docs"
 metadataformat = "yaml"
 canonifyurls = true
+disqusShortname = "securebrigate"
 # Enable Google Analytics by entering your tracking id
 googleAnalytics = ""
 hasCJKLanguage = true
 
 [taxonomies]
 tag = "tags"
+
+[permalinks]
+	page = "/:filename/"
+	about = "/:filename/"
+	episode = "/:filename/"
 
 [params]
 	# General information
@@ -24,6 +30,7 @@ tag = "tags"
 	#version = "1.0.0"
 	logo = "images/logo0.png"
 	favicon = ""
+	mdeia_prefix = "audio/"
 
 	permalink = "#"
 
