--- a/config.toml
+++ b/config.toml
@@ -4,18 +4,18 @@ title = "セキュア旅団"
 theme = "hugo-material-docs"
 metadataformat = "yaml"
 canonifyurls = true
-disqusShortname = "securebrigate"
+# disqusShortname = "securebrigate"
 # Enable Google Analytics by entering your tracking id
 googleAnalytics = ""
-hasCJKLanguage = true
+# hasCJKLanguage = true
 
 [taxonomies]
 tag = "tags"
 
-[permalinks]
-	page = "/:filename/"
-	about = "/:filename/"
-	episode = "/:filename/"
+# [permalinks]
+# 	page = "/:filename/"
+# 	about = "/:filename/"
+# 	episode = "/:filename/"
 
 [params]
 	# General information
@@ -60,8 +60,8 @@ tag = "tags"
 	weight = 0
 
 [[menu.main]]
-	name   = "Podcasts"
-	url    = "podcasts/"
+	name   = "Podcast"
+	url    = "podcast/"
 	weight = 10
 
 [[menu.main]]
